--- a/src/static/sass/project.scss
+++ b/src/static/sass/project.scss
@@ -38,3 +38,5 @@
 @import 'partials/tables';
 @import 'partials/compare_towns';
 @import 'partials/dateselector';
+@import 'partials/sotslogo';
+@import 'partials/links';
