tweaking styles and metdata

--- a/src/templates/metadata.html
+++ b/src/templates/metadata.html
@@ -66,9 +66,17 @@
     with SOTS, and are present in our data, however they do not represent a comprehensive measure of the formation of
     General Partnerships.
 </p>
-<h3>
-    Limitations of this Data
-</h3>
+<h3>Limitations of this Data</h3>
+<h4>Counting Formations</h4>
+<p>
+  The process of forming a business in Connecticut begins with registering with the Connecticut Secretary of the State and is
+  complete when the entity submits a final filing that varies based on the type of business that is being created. While this
+  process is often completed in the same transaction, on occasion a period of time can pass between inital registration and the final
+  act of formation. This can present some challenges when aggregating business formations to a given time period. For the purposes
+  of this application we consider a business to be formed when the final formation filing has been processed, not when a business
+  is intially registered. As a result the counts that we present may be different from other reports that present summaries of
+  business formations/starts over a given time period.
+</p>
 <h4>
     Addresses
 </h4>
