updated readme instructions

--- a/src/templates/metadata.html
+++ b/src/templates/metadata.html
@@ -3,7 +3,7 @@
 </h2>
 <p>
     This data portal provides business formation and public record filing data filed with the Office of the Secretary of
-    the State from 1980 to 2015. The Secretary of the State's business registry records filing types mandated or
+    the State from {{ startMonth }} {{ startYear }} to {{ endMonth }} {{ endYear }}. The Secretary of the State's business registry records filing types mandated or
     authorized under <a target="_blank" href="https://www.cga.ct.gov/2011/pub/title33.htm">Title 33<i
         class="fa fa-external-link-square"></i></a> and <a target="_blank"
                                                            href="https://www.cga.ct.gov/2011/pub/title34.htm">Title 34<i
