--- a/src/static/sass/partials/_project_footer.scss
+++ b/src/static/sass/partials/_project_footer.scss
@@ -15,9 +15,10 @@
         p {
             width: 100%;
             text-align: center;
-            font-size:1rem;
+            font-size: 1rem;
             color: lightgrey;
             padding: 0.5rem 0.1rem 0;
+            margin: 15px 0 25px 0;
         }
     }
 
