--- a/src/static/sass/partials/_project_hero.scss
+++ b/src/static/sass/partials/_project_hero.scss
@@ -129,7 +129,8 @@
                           rgba(0, 0, 0, 0.4),
                           rgba(0, 0, 0, 0.4)
           ),
-          url('/images/hartford-treeline.jpg');
+          url('/images/postcard.jpg');
+  background-position: 0 70%;
 
   background-size: cover;
   width: 100%;
@@ -137,11 +138,11 @@
   overflow-y: hidden;
   position: relative;
   float: left;
-
+/*
   @media screen and (max-width: 64rem) {
-    background-position: 0% 65%;
-    
-  }
+    background-position: 0% 100%;
+
+  } */
   @media screen and (max-width: 36rem) {
     background:
           linear-gradient(
