--- a/src/static/sass/partials/_project_nav.scss
+++ b/src/static/sass/partials/_project_nav.scss
@@ -11,7 +11,7 @@ nav {
     padding-left: 2rem;
     //max-height: 6rem;
     img {
-        max-height: 5rem;
+        max-height: 4rem;
     }
     p, span {
         line-height: 1.25rem;
@@ -114,4 +114,8 @@ nav {
     top: 0;
     left: 0;
     right: 0;
+}
+
+img {
+  max-height: 100%;
 }
