Bulk upload of minor improvements in the past 6 months

--- a/src/static/sass/partials/_project_nav.scss
+++ b/src/static/sass/partials/_project_nav.scss
@@ -7,11 +7,11 @@ nav {
 }
 
 .logo {
-    padding-top: 0rem;
+    padding-top: 0;
     padding-left: 2rem;
     //max-height: 6rem;
     img {
-        max-height: 4rem;
+        max-height: 3rem;
     }
     p, span {
         line-height: 1.25rem;
